force-app/main/default/objects/Asset/fields/Alternative_Name__c.field-meta.xml
<CustomField>
    <fullName>Alternative_Name__c</fullName>
    <formula>Product2.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternative Name</label>
    <type>Text</type>
</CustomField>