force-app/main/default/objects/Asset/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <formula>TEXT(Product2.Family)</formula>
    <label>Category</label>
    <type>Text</type>
</CustomField>