force-app/main/default/objects/Asset/fields/Current_Inventory_F__c.field-meta.xml
<CustomField>
    <fullName>Current_Inventory_F__c</fullName>
    <formula>Quantity -( Damaged_F__c  +  Maintenance_F__c + Other_R__c +  Rebranding_F__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field includes On Shelf and Out but not including Rebranding/Maintenance, Damaged, Other.</inlineHelpText>
    <label>Current Inventory</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>