force-app/main/default/objects/Asset/fields/Damaged_F__c.field-meta.xml
<CustomField>
    <fullName>Damaged_F__c</fullName>
    <formula>Damaged_R__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field denotes the number of tools that are in damaged condition.</inlineHelpText>
    <label>Damaged</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>