force-app/main/default/objects/Asset/fields/Lost_R__c.field-meta.xml
<CustomField>
    <fullName>Lost_R__c</fullName>
    <inlineHelpText>This field denotes the number of tools that are Lost</inlineHelpText>
    <label>Lost</label>
    <summarizedField>Transaction__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Lost</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>