force-app/main/default/objects/Asset/fields/Lost_Return__c.field-meta.xml
<CustomField>
    <fullName>Lost_Return__c</fullName>
    <label>Lost - Return</label>
    <summarizedField>Transaction__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.Sub_Type__c</field>
        <operation>equals</operation>
        <value>Lost - Return</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>