force-app/main/default/objects/Asset/fields/Maintenance_F__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_F__c</fullName>
    <formula>IF( Maintenance_Returned_R__c = Maintenance_R__c , Maintenance_R__c, IF(Maintenance_Returned_R__c &lt; Maintenance_R__c, Maintenance_R__c - Maintenance_Returned_R__c, Maintenance_R__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field denotes the number of tools that are in maintenance condition.</inlineHelpText>
    <label>Maintenance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>