force-app/main/default/objects/Asset/fields/Maintenance_R__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_R__c</fullName>
    <inlineHelpText>This field denotes the number of tools that are in maintenance condition</inlineHelpText>
    <label>Maintenance</label>
    <summarizedField>Transaction__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.Sub_Type__c</field>
        <operation>equals</operation>
        <value>Maintenance</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>