force-app/main/default/objects/Asset/fields/On_Shelf_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>On_Shelf_Adjustment__c</fullName>
    <label>On Shelf Adjustment</label>
    <summarizedField>Transaction__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>On Shelf Adjustment</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>