force-app/main/default/objects/Asset/fields/On_Shelf_Quantity_F__c.field-meta.xml
<CustomField>
    <fullName>On_Shelf_Quantity_F__c</fullName>
    <formula>Current_Inventory_F__c - Out_F__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>These tools are currently in the warehouse but may be reserved for other orders.</inlineHelpText>
    <label>On Shelf Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>