force-app/main/default/objects/Asset/fields/Order_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Order_Contact_Phone__c</fullName>
    <label>Order Contact Phone</label>
    <type>Phone</type>
</CustomField>