force-app/main/default/objects/Asset/fields/Other_R__c.field-meta.xml
<CustomField>
    <fullName>Other_R__c</fullName>
    <inlineHelpText>This field denotes the number of tools that are faulty or due to any other reason not available for allocation..</inlineHelpText>
    <label>Other</label>
    <summarizedField>Transaction__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.Sub_Type__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>