force-app/main/default/objects/Asset/fields/Out_F__c.field-meta.xml
<CustomField>
    <fullName>Out_F__c</fullName>
    <formula>Out_R__c - Returned_R__c</formula>
    <inlineHelpText>This field indicates the number of tools loaned out to an agency.</inlineHelpText>
    <label>Out</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>