force-app/main/default/objects/Asset/fields/Out_no_0_adj__c.field-meta.xml
<CustomField>
    <fullName>Out_no_0_adj__c</fullName>
    <formula>Out_R__c - Returned_R__c - Lost_Return__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Out (no 0 adj)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>