force-app/main/default/objects/Asset/fields/Rebranding_F__c.field-meta.xml
<CustomField>
    <fullName>Rebranding_F__c</fullName>
    <formula>IF( Rebranding_Returned_R__c = Rebranding_R__c , Rebranding_R__c, IF(Rebranding_Returned_R__c &lt; Rebranding_R__c, Rebranding_R__c - Rebranding_Returned_R__c,Rebranding_R__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field denotes the number of tools that are in rebranding condition.</inlineHelpText>
    <label>Rebranding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>