force-app/main/default/objects/Asset/fields/Retired_R__c.field-meta.xml
<CustomField>
    <fullName>Retired_R__c</fullName>
    <inlineHelpText>This field denotes the number of tools that are retired like donated, destroyed, worn-out, sold etc..</inlineHelpText>
    <label>Retired</label>
    <summarizedField>Transaction__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Retired</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>