force-app/main/default/objects/Asset/fields/Returned_R__c.field-meta.xml
<CustomField>
    <fullName>Returned_R__c</fullName>
    <label>Returned</label>
    <summarizedField>Transaction__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Transaction__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Returned</value>
    </summaryFilterItems>
    <summaryForeignKey>Transaction__c.Inventory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>