force-app/main/default/objects/Asset/fields/Spanish_Name__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Name__c</fullName>
    <formula>Product2.Spanish_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spanish Name</label>
    <type>Text</type>
</CustomField>