force-app/main/default/objects/Asset/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <formula>TEXT(Product2.Sub_Category__c )</formula>
    <label>Sub-Category</label>
    <type>Text</type>
</CustomField>