force-app/main/default/objects/Asset/fields/Total_Stock_Historical__c.field-meta.xml
<CustomField>
    <fullName>Total_Stock_Historical__c</fullName>
    <inlineHelpText>This field denotes the number of tools added to the inventory over a period of time. It will only be incremented.</inlineHelpText>
    <label>Total Stock (Historical)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>