force-app/main/default/objects/Asset/fields/Unlisted_Item__c.field-meta.xml
<CustomField>
    <fullName>Unlisted_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unlisted Item</label>
    <type>Checkbox</type>
</CustomField>