force-app/main/default/objects/Asset/fields/Weekly_Handling_Fee__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Handling_Fee__c</fullName>
    <formula>Retail_Price__c * Affiliate_Handling_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Handling Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>