force-app/main/default/objects/Asset/validationRules/Only_Admin_can_update_Inventory_name.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Admin_can_update_Inventory_name</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Name) &amp;&amp;  ($Profile.Id &lt;&gt; &quot;00eA0000000W1t2&quot; &amp;&amp; NOT($Permission.Update_Inventory))</errorConditionFormula>
    <errorMessage>You do not have permission to edit this field.</errorMessage>
</ValidationRule>