force-app/main/default/objects/Asset/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ASSET.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Retail_Price__c</columns>
    <columns>Weekly_Handling_Fee__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>