force-app/main/default/objects/Asset/listViews/ATL_ToolBank_Training_Center_Inventory.listView-meta.xml
<ListView>
    <fullName>ATL_ToolBank_Training_Center_Inventory</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Atlanta ToolBank Training Center</value>
    </filters>
    <label>ATL ToolBank Training Center Inventory</label>
    <sharedTo>
        <group>Atlanta_Community_ToolBank</group>
    </sharedTo>
</ListView>