force-app/main/default/objects/Asset/listViews/Atlanta.listView-meta.xml
<ListView>
    <fullName>Atlanta</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Affiliate_Handling_Fee__c</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>On_Shelf_Quantity_F__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>atlanta</value>
    </filters>
    <label>Atlanta</label>
</ListView>