force-app/main/default/objects/Asset/listViews/Atlanta_Test_Inventory.listView-meta.xml
<ListView>
    <fullName>Atlanta_Test_Inventory</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Atlanta-Test Affiliate</value>
    </filters>
    <label>Atlanta Test Inventory</label>
</ListView>