force-app/main/default/objects/Asset/listViews/Atlanta_Training_On_Shelf.listView-meta.xml
<ListView>
    <fullName>Atlanta_Training_On_Shelf</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>On_Shelf_Quantity_F__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>equals</operation>
        <value>Atlanta ToolBank Training Center</value>
    </filters>
    <filters>
        <field>ASSET.QUANTITY</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Atlanta Training - On Shelf</label>
    <sharedTo>
        <group>Admins</group>
        <group>Atlanta_Community_ToolBank</group>
    </sharedTo>
</ListView>