force-app/main/default/objects/Asset/listViews/Intake.listView-meta.xml
<ListView>
    <fullName>Intake</fullName>
    <columns>ASSET.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Retail_Price__c</columns>
    <columns>Weekly_Handling_Fee__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>On_Shelf_Quantity_F__c</columns>
    <columns>Total_Stock_Historical__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>intake</value>
    </filters>
    <label>Intake</label>
    <sharedTo>
        <group>TDS_except_PR_and_NO</group>
    </sharedTo>
</ListView>