force-app/main/default/objects/Asset/listViews/MU10_Inventory.listView-meta.xml
<ListView>
    <fullName>MU10_Inventory</fullName>
    <columns>ASSET.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>On_Shelf_Quantity_F__c</columns>
    <columns>Out_no_0_adj__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>MU10</value>
    </filters>
    <label>MU10 Inventory</label>
    <sharedTo>
        <group>TDS_MU10</group>
    </sharedTo>
</ListView>