force-app/main/default/objects/Asset/listViews/MU1_Inventory.listView-meta.xml
<ListView>
    <fullName>MU1_Inventory</fullName>
    <columns>ASSET.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>On_Shelf_Quantity_F__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>MU1</value>
    </filters>
    <label>MU1 - Inventory</label>
    <sharedTo>
        <group>Admins</group>
        <group>TDS_except_PR_and_NO</group>
    </sharedTo>
</ListView>