force-app/main/default/objects/Asset/listViews/MU3_Inventory.listView-meta.xml
<ListView>
    <fullName>MU3_Inventory</fullName>
    <columns>ASSET.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>ASSET.QUANTITY</columns>
    <columns>On_Shelf_Quantity_F__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>MU3</value>
    </filters>
    <label>MU3 - Inventory</label>
    <sharedTo>
        <group>Admins</group>
        <group>TDS_Puerto_Rico_ToolBank</group>
    </sharedTo>
</ListView>