force-app/main/default/objects/Asset/listViews/MU4.listView-meta.xml
<ListView>
    <fullName>MU4</fullName>
    <columns>ASSET.NAME</columns>
    <columns>ASSET.SERIAL_NUMBER</columns>
    <columns>ASSET.INSTALL_DATE</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.NAME</columns>
    <columns>PRODUCT2.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>MU4</value>
    </filters>
    <filters>
        <field>ASSET.QUANTITY</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>MU4</label>
    <sharedTo>
        <role>Salesforce_Administrator</role>
    </sharedTo>
</ListView>